fix video end issue on mobile

--- a/src/style/scss/_typography.scss
+++ b/src/style/scss/_typography.scss
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 h2.iapp-header {
     margin-top: 6em;
     @media (max-width: 600px) {
-        margin-top: 70px;
+        margin-top: 20px;
     }
 }
 
